--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,6 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="new_task">New Task</string>
     <string name="save">Save</string>
@@ -13,4 +12,5 @@
     <string name="here_you_can_write_down_something_important_or_make_a_schedule_for_tomorrow">Here you can write down something important or make a schedule for tomorrow:)</string>
     <string name="skip">SKIP</string>
     <string name="next">NEXT</string>
+    <string name="sort">Sort</string>
 </resources>
