--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="sort">Sort</string>
     <string name="send">Send</string>
     <string name="enter_your_phone_number">Enter your phone number</string>
+    <string name="description">Description</string>
+    <string name="title">Title</string>
 </resources>
