--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="enter_your_phone_number">Enter your phone number</string>
     <string name="description">Description</string>
     <string name="title">Title</string>
+    <string name="confirm">Confirm</string>
+    <string name="enter_verification_code">Enter verification code</string>
+    <string name="_996">+996</string>
 </resources>
